--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
               Indice
             </a>
             <div class="dropdown-menu sm-menu">
-              <a class="dropdown-item" href="https://lively-lily-484d5a.netlify.app/#ventajas">Ventajas de Bootstrap</a>
-              <a class="dropdown-item" href="https://lively-lily-484d5a.netlify.app/#componentes">Componentes principales</a>
-              <a class="dropdown-item" href="https://lively-lily-484d5a.netlify.app/#video">Aprender mas</a>
+              <a class="dropdown-item" href="https://comfy-daifuku-9e0776.netlify.app/#ventajas">Ventajas de Bootstrap</a>
+              <a class="dropdown-item" href="https://comfy-daifuku-9e0776.netlify.app/#componentes">Componentes principales</a>
+              <a class="dropdown-item" href="https://comfy-daifuku-9e0776.netlify.app/#video">Aprender mas</a>
             </div>
           </li>
         </ul>
